--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@inventory) do |f| %>
-  <% if @inventory.errors.any? %>
+<%= form_for(@item) do |f| %>
+  <% if @item.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@inventory.errors.count, "error") %> prohibited this inventory from being saved:</h2>
+      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
 
       <ul>
-      <% @inventory.errors.full_messages.each do |msg| %>
+      <% @item.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
